<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <EditText
        android:id="@+id/edLogin"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginBottom="340dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edLogin" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/Color2"
        android:fontFamily="sans-serif-medium"
        android:onClick="onClickSignUp"
        android:text="@string/register"
        android:textSize="16sp"
        android:visibility="visible"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/Color2"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="onClickSignIn"
        android:text="@string/Enter"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bSignUp"
        app:layout_constraintTop_toBottomOf="@+id/bSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wallpaper_2" />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="42dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/logo_white" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ashram_app"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="passwordRemember"
        android:text="@string/PasswordRemember"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSignIn"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/eTEmale"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.475" />

    <Button
        android:id="@+id/bRememberPass"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/Color2"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:onClick="rememberPass"
        android:text="@string/getLink"
        android:textSize="16sp"

        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/bBack"
        app:layout_constraintEnd_toEndOf="@+id/eTEmale"
        app:layout_constraintStart_toStartOf="@+id/eTEmale"
        app:layout_constraintTop_toBottomOf="@+id/eTEmale" />

    <Button
        android:id="@+id/bBack"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/Color2"
        android:fontFamily="sans-serif-medium"
        android:onClick="back"
        android:textSize="16sp"
        android:text="@string/Back"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="@+id/bRememberPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bRememberPass"
        app:layout_constraintTop_toBottomOf="@+id/eTEmale"
        app:layout_constraintVertical_bias="0.386" />


</androidx.constraintlayout.widget.ConstraintLayout>